<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_cast_button_connected">Cast button. Connected</string>
    <string name="mr_cast_button_connecting">Cast button. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast button. Disconnected</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop_casting">Stop casting</string>
    <string name="mr_controller_volume_slider">Volume slider</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="APP_ERROR_ACTIONID_10_CUSTOMERCREDENTIALRENEWALREQ">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12010).</string>
    <string name="APP_ERROR_ACTIONID_11_ABORTPLAYBACK">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12011).</string>
    <string name="APP_ERROR_ACTIONID_12_STALECREDENTIALS">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12012).</string>
    <string name="APP_ERROR_ACTIONID_13_FORCELOGOUT">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12013).</string>
    <string name="APP_ERROR_ACTIONID_1_NONRECOVABLE">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (12001).</string>
    <string name="APP_ERROR_ACTIONID_2_MAYBERECOVABLE">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (12002).</string>
    <string name="APP_ERROR_ACTIONID_3_CUSTOM_EMPTY">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (12003).</string>
    <string name="APP_ERROR_ACTIONID_5_RELOGIN">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12005).</string>
    <string name="APP_ERROR_ACTIONID_8_GETNEWCREDENTIALS">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (12008).</string>
    <string name="APP_ERROR_ACTIONID_9_UNSUPPORTED_VERSION">This software version is no longer supported; please upgrade to enable viewing. Visit the Netflix website for more details (12009).</string>
    <string name="APP_ERROR_PLAY_UKNOWN">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (11001).</string>
    <string name="NFErr_Interrupted">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (0013).</string>
    <string name="NFErr_MC_NCCP_ImpossibleImpossibility">Please log in to Netflix again. If the problem persists, please visit the Netflix website. (2007).</string>
    <string name="NFErr_MC_NCCP_MTicketRenewalRequired">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (2006).</string>
    <string name="NFErr_MC_NCCP_RegistrationRequired">It looks like Netflix has been deactivated on this device. It could be an issue with your account or perhaps your device was deactivated on the Netflix website (2004).</string>
    <string name="NFErr_MC_OpenDeviceFailure_Restart">Playback could not be started. If the problem persists, please restart your device and try again. (1018).</string>
    <string name="NFErr_NetworkError">Sorry, we could not reach the Netflix service. Please try again later. If the problem persists, please visit the Netflix website (0041).</string>
    <string name="NFErr_OFFLINE_PLAYBACK_FAILED">There is a problem with the video file.%1$s</string>
    <string name="NFErr_STREAMING_PLAYBACK_FAILED">There is a problem playing the video. Please try again. %1$s</string>
    <string name="NFErr_STREAMING_PLAYBACK_FAILURE_PERSISTS">There is a problem playing the video. If the problem persists, please restart your device and try again. %1$s</string>
    <string name="NFErr_STREAMING_PLAYBACK_NETWORK">"We're having a problem connecting to Netflix. Please try again later or try an alternative network connection. %1$s"</string>
    <string name="NFErr_WidevinePluginBlackListed_playback">Playback could not be started. If the problem persists, please restart your device and try again. (%1$d).</string>
    <string name="accesibility_add_to_my_list">Add to My List</string>
    <string name="accesibility_btnEpisodes">Change episode</string>
    <string name="accesibility_btnLanguage">Change subtitle and/or audio source language</string>
    <string name="accesibility_btnMdxTarget">Play On</string>
    <string name="accesibility_btnPlayPause">Play/Pause</string>
    <string name="accesibility_btnSkipBack">Back 30 seconds</string>
    <string name="accesibility_btnStop">Stop</string>
    <string name="accesibility_btnVolume">Change Volume</string>
    <string name="accesibility_continue_watching">Continue watching %1$s</string>
    <string name="accesibility_episode_number_description">Episode %1$d: %2$s. %3$s. Runtime: %4$d minutes</string>
    <string name="accesibility_imgUiSplashLogo">Please wait while we start the Netflix application…</string>
    <string name="accesibility_play_episode">Play Episode</string>
    <string name="accesibility_play_video">Play Video %1$s</string>
    <string name="accesibility_postplay_select_recommendation">Select %1$s</string>
    <string name="accesibility_ratings_bar">Rated %1$d stars</string>
    <string name="accesibility_toggle_main_menu">Toggle Main Menu</string>
    <string name="accesibility_volume">Volume</string>
    <string name="accesibility_zoom">Zoom</string>
    <string name="access_error_account">Sorry, we can not load your account settings at this time, please try later.</string>
    <string name="access_error_invalid_country">"Sorry, Netflix hasn't come to this part of the world yet"</string>
    <string name="app_name">Netflix</string>
    <string name="audio_permission_declined">You are not able to call customer support unless you grant application access to requested audio permissions.</string>
    <string name="audio_permission_rationale">Audio permissions are needed to call customer support.</string>
    <string name="barker_dot">%1$s.</string>
    <string name="billboard_cta_continue_watching">Continue Watching</string>
    <string name="email">Email</string>
    <string name="label_more_info">More Info</string>
    <string name="label_play_now">Play Now</string>
    <string name="label_play_trailer">Play trailer</string>
    <string name="label_postplay_playNextEpisode">Next episode</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_similar_shows">More Like: %1$s</string>
    <string name="label_video_details_pre_release_soon">Coming Soon</string>
    <string name="memento_back_to_browse">BACK TO BROWSE</string>
    <string name="memento_how_do_you_like">How did you like</string>
    <string name="password">Password</string>
    <string name="rating_tooltip_body">Rate TV shows &amp; movies to improve your suggestions.</string>
    <string name="rating_tooltip_ok_button">"OK, I've got it"</string>
    <string name="rating_tooltip_sub_body">Your previous star ratings will still be used to personalize your Netflix experience.</string>
    <string name="rating_tooltip_title">"Now it's easier to tell us what you like."</string>
    <string name="show">SHOW</string>
    <string name="icon_font_add_to_list"></string>
    <string name="icon_font_skip_back_30"></string>
</resources>