<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/billboard_portrait_button_group" android:paddingBottom="14.0dip" style="@style/wrap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.netflix.mediaclient.android.widget.IconFontTextView android:textSize="44.0sp" android:layout_gravity="center_vertical" android:id="@id/billboard_portrait_add_to_queue" android:background="@drawable/selectable_video_background_with_press" android:focusable="true" android:text="@string/icon_font_add_to_list" android:contentDescription="@string/accesibility_add_to_my_list" android:layout_marginEnd="55.0dip" style="@style/IconFontBasic.NoShadow" />
    <com.netflix.mediaclient.android.widget.NetflixTextButton android:id="@id/billboard_cta1_portrait_button" android:text="@string/label_play_now" android:contentDescription="@string/label_play_now" android:drawableStart="@drawable/p4p_play" android:layout_marginEnd="@dimen/content_padding" style="@style/NetflixButton.Red" />
    <com.netflix.mediaclient.android.widget.NetflixTextButton android:id="@id/billboard_cta2_portrait_button" android:visibility="gone" android:text="@string/label_play_trailer" android:contentDescription="@string/label_play_now" android:drawableStart="@drawable/p4p_play" android:layout_marginEnd="@dimen/content_padding" style="@style/NetflixButton.Red" />
    <com.netflix.mediaclient.android.widget.NetflixTextButton android:id="@id/billboard_portrait_info_button" android:visibility="gone" android:text="@string/label_more_info" android:contentDescription="@string/label_more_info" style="@style/NetflixButton.Outline" />
    <ImageView android:layout_gravity="center_vertical" android:id="@id/billboard_portrait_view_info" android:background="@drawable/selectable_video_background_with_press" android:focusable="true" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_cw_info" android:layout_marginStart="55.0dip" />
</LinearLayout>