<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" style="@style/wrap"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="@dimen/text_medium" android:id="@id/login_email" android:layout_width="@dimen/login_field_width" android:layout_height="wrap_content" android:hint="@string/email" android:singleLine="true" android:maxLength="50" android:drawablePadding="@dimen/content_padding" android:inputType="textEmailAddress" android:imeOptions="flagForceAscii|flagNoFullscreen" />
    <FrameLayout style="@style/wrap"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <EditText android:textSize="@dimen/text_medium" android:id="@id/login_password" android:layout_width="@dimen/login_field_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_padding" android:hint="@string/password" android:singleLine="true" android:maxLength="60" android:drawablePadding="@dimen/login_password_padding_right" android:inputType="textPassword" android:imeOptions="actionDone|flagNoFullscreen" android:imeActionLabel="@string/label_sign_in" android:imeActionId="@integer/ime_action_login" android:drawableEnd="@android:color/transparent" />
        <TextView android:textSize="@dimen/text_small_medium" android:textColor="@color/grey" android:layout_gravity="end|bottom|center" android:id="@id/show_password" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/login_show_field_bottom_margin" android:text="@string/show" android:layout_alignBaseline="@id/login_password" android:layout_alignBottom="@id/login_password" android:fontFamily="sans-serif" android:layout_marginEnd="@dimen/login_show_field_right_margin" android:layout_alignEnd="@id/login_password" />
    </FrameLayout>
</LinearLayout>