<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/cast_player_controls_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/cast_player_aux_controls" android:layout_width="fill_parent" android:layout_height="@dimen/cast_player_controls_group_height" android:layout_centerHorizontal="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/cast_player_episodes_btn_expanded" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_episodes" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnEpisodes" style="@style/CastPlayerActionButton" />
        <ImageView android:id="@id/cast_player_volume_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/p4t_volume" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnVolume" style="@style/CastPlayerActionButton" />
        <ImageView android:id="@id/cast_player_language_btn_expanded" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_audio_sub" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnLanguage" style="@style/CastPlayerActionButton" />
        <ImageView android:id="@id/cast_player_device_name_group" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_mr_button_connected_22_dark" android:layout_weight="1.0" style="@style/CastPlayerActionButton" />
    </LinearLayout>
    <RelativeLayout android:id="@id/cast_player_seek_bar_group" android:layout_width="fill_parent" android:layout_height="@dimen/cast_player_controls_group_height" android:baselineAligned="false" android:layout_below="@id/cast_player_aux_controls">
        <include android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_toLeftOf="@id/cast_player_seek_bar_remaining_time" android:layout_toRightOf="@id/cast_player_seek_bar_current_time" android:layout_centerHorizontal="true" android:layout_centerVertical="true" layout="@layout/cast_player_seek_bar" />
        <TextView android:id="@id/cast_player_seek_bar_current_time" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/cast_player_seek_bar_time_view_height" android:layout_marginLeft="@dimen/rdp_content_padding" android:layout_marginRight="@dimen/rdp_content_padding" android:singleLine="true" android:layout_centerVertical="true" style="@style/SecondaryText.Micro" />
        <TextView android:id="@id/cast_player_seek_bar_remaining_time" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/cast_player_seek_bar_time_view_height" android:layout_marginLeft="@dimen/rdp_content_padding" android:layout_marginRight="@dimen/rdp_content_padding" android:singleLine="true" android:layout_centerVertical="true" android:layout_alignParentEnd="true" style="@style/SecondaryText.Micro" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/cast_player_playcard_controls_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/cast_player_seek_bar_group" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/cast_player_play_pause_btn_expanded" android:src="@drawable/p4t_play" android:layout_centerInParent="true" android:contentDescription="@string/accesibility_btnPlayPause" style="@style/CastPlayerPlayButton" />
        <com.netflix.mediaclient.android.widget.IconFontTextView android:textSize="24.0dip" android:id="@id/cast_player_skip_back_btn_expanded" android:text="@string/icon_font_skip_back_30" android:layout_toRightOf="@id/cast_player_play_pause_btn_expanded" android:layout_centerVertical="true" android:contentDescription="@string/accesibility_btnSkipBack" style="@style/IconFontButton" />
        <ImageView android:id="@id/cast_player_stop_btn" android:src="@drawable/p4t_stop" android:layout_toLeftOf="@id/cast_player_play_pause_btn_expanded" android:layout_centerVertical="true" android:contentDescription="@string/accesibility_btnStop" style="@style/CastPlayerActionButton" />
    </RelativeLayout>
</RelativeLayout>