<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout style="@style/match">
        <com.netflix.mediaclient.android.widget.AdvancedImageView android:id="@id/background_img" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitStart" android:adjustViewBounds="true" />
        <View android:background="@drawable/barker_hero_info_background" android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_alignBottom="@id/background_img" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/video_img_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/background_img" android:layout_centerInParent="true">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.netflix.mediaclient.android.widget.NetflixTextButton android:ellipsize="end" android:id="@id/trailer_play_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/postplay_episodes_phones_overlay_black_height" android:text="@string/label_play_trailer" android:maxLines="1" android:contentDescription="@string/label_postplay_playNextEpisode" android:drawableStart="@drawable/p4p_play" android:layout_marginEnd="@dimen/barker_gutter_size" style="@style/PostPlayPlayButton" />
                <include android:id="@id/video_details_add_to_queue_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" layout="@layout/my_list_button" />
            </LinearLayout>
            <com.netflix.mediaclient.android.widget.NetflixTextView android:textStyle="bold" android:ellipsize="end" android:gravity="center" android:id="@id/video_details_available_date" android:layout_marginTop="20.0dip" android:text="@string/label_video_details_pre_release_soon" android:maxLines="1" android:paddingStart="@dimen/content_padding" style="@style/PrimaryText.MediumLarge" />
            <com.netflix.mediaclient.android.widget.NetflixTextView android:ellipsize="end" android:gravity="center" android:id="@id/video_details_synopsis" android:layout_marginTop="@dimen/double_padding" android:layout_marginBottom="@dimen/content_padding" android:maxLines="6" android:lineSpacingMultiplier="@dimen/line_spacing_expanded" android:fontFamily="sans-serif-light" style="@style/PrimaryText.SmallMedium" />
            <com.netflix.mediaclient.android.widget.NetflixTextView android:gravity="center" android:id="@id/video_details_starring" android:layout_marginTop="@dimen/double_padding" android:lineSpacingMultiplier="@dimen/line_spacing_expanded" style="@style/SecondaryText.Small" />
            <com.netflix.mediaclient.android.widget.NetflixTextView android:id="@id/video_details_creators" android:layout_marginTop="@dimen/double_padding" android:lineSpacingMultiplier="@dimen/line_spacing_expanded" style="@style/SecondaryText.Small" />
            <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_padding" android:layout_marginBottom="@dimen/content_padding" layout="@layout/video_details_copyright" />
            <FrameLayout android:id="@id/video_details_footer" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.netflix.mediaclient.android.widget.NetflixTextView android:textStyle="bold" android:ellipsize="end" android:id="@id/similar_items_grid_view_title" android:visibility="gone" android:layout_marginTop="@dimen/content_padding" android:layout_marginBottom="@dimen/content_padding" android:text="@string/label_similar_shows" android:maxLines="2" android:singleLine="true" android:lineSpacingMultiplier="@dimen/line_spacing_expanded" android:paddingStart="@dimen/content_padding" style="@style/PrimaryText.SmallMedium" />
            </FrameLayout>
        </LinearLayout>
        <com.netflix.mediaclient.android.widget.TopCropImageView android:layout_gravity="center" android:id="@id/video_img" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:layout_marginBottom="@dimen/double_padding" android:scaleType="centerCrop" android:adjustViewBounds="true" android:layout_above="@id/video_img_group" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</merge>