<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/match"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/postplay_with_rating_container" android:background="@color/cast_player_post_play_bg" android:paddingBottom="@dimen/rdp_content_padding" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.netflix.mediaclient.android.widget.NetflixTextButton android:gravity="center" android:layout_gravity="center" android:id="@id/postplay_browse_btn" android:paddingLeft="48.0dip" android:paddingRight="48.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/button_min_height" android:text="@string/memento_back_to_browse" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/NetflixButton.Outline" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_above="@id/postplay_browse_btn" android:layout_centerHorizontal="true">
            <com.netflix.mediaclient.android.widget.NetflixTextView android:textSize="18.0sp" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/memento_how_do_you_like" android:layout_weight="1.0" />
            <com.netflix.mediaclient.android.widget.NetflixTextView android:textSize="21.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/postplay_movie_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/postplay_thumbs_rating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="2.0">
                <ImageView android:id="@id/postplay_thumbs_up" android:background="@drawable/selectable_video_background_with_press" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/ic_thumbs_up_selectable" android:scaleType="fitCenter" android:tint="#ffababab" android:layout_marginEnd="16.0dip" style="@style/NetflixSquareButton.Flat" />
                <ImageView android:id="@id/postplay_thumbs_down" android:background="@drawable/selectable_video_background_with_press" android:layout_width="45.0dip" android:layout_height="45.0dip" android:src="@drawable/ic_thumbs_down_selectable" android:scaleType="fitCenter" android:tint="#ffababab" android:layout_marginStart="16.0dip" style="@style/NetflixSquareButton.Flat" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/postplay_next_container" android:background="@color/cast_player_post_play_bg" android:paddingTop="@dimen/rdp_content_padding" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/rdp_content_padding" android:paddingEnd="@dimen/rdp_content_padding">
        <com.netflix.mediaclient.android.widget.NetflixTextView android:textSize="14.0sp" android:id="@id/post_play_countdown" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-medium" />
        <com.netflix.mediaclient.android.widget.NetflixTextView android:textSize="14.0sp" android:id="@id/postplay_target_name" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/post_play_countdown" android:fontFamily="sans-serif-medium" />
        <com.netflix.mediaclient.android.widget.NetflixTextView android:textSize="16.0sp" android:id="@id/postplay_episode_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_below="@id/postplay_target_name" android:fontFamily="sans-serif-medium" />
        <com.netflix.mediaclient.android.widget.NetflixTextView android:textSize="14.0sp" android:ellipsize="end" android:id="@id/post_play_synopsis" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:maxLines="3" android:layout_above="@id/postplay_play_btn" android:layout_below="@id/postplay_episode_title" android:fontFamily="sans-serif-light" />
        <com.netflix.mediaclient.android.widget.NetflixTextButton android:ellipsize="end" android:id="@id/postplay_play_btn" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="@dimen/postplay_episodes_phones_overlay_black_height" android:layout_marginBottom="18.0dip" android:text="@string/label_postplay_playNextEpisode" android:maxLines="1" android:singleLine="true" android:layout_alignParentBottom="true" android:contentDescription="@string/label_postplay_playNextEpisode" android:drawableStart="@drawable/p4p_play" android:layout_marginEnd="@dimen/postplay_episodes_margin" style="@style/PostPlayPlayButton" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/postplay_episodes_phones_overlay_black_height" android:layout_toRightOf="@id/postplay_play_btn" android:layout_alignTop="@id/postplay_play_btn" android:layout_alignBottom="@id/postplay_play_btn">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/postplay_stop_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/p4t_stop" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnStop" style="@style/CastPlayerActionButton" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/postplay_episodes_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_episodes" android:layout_weight="1.0" android:contentDescription="@string/accesibility_btnEpisodes" style="@style/CastPlayerActionButton" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>